# outline

./: .gitignore  README.md  arch.sh  fix.Rmd  query2.md  rename.R  shunt.R  sirius.err
ahr/: IL4I1_research.md  eucommia_ahr.Rmd  model.marix.R  rna_seq.ref.R  supp.tbl_1.xlsx  supp.tbl_2.xlsx
ahr_sig/: analysis_data.1.R  analysis_data.10.R  analysis_data.11.R  analysis_data.12.R  analysis_data.13.R  analysis_data.16.R  analysis_data.17.R  analysis_data.18.R  analysis_data.19.R  analysis_data.2.R  analysis_data.20.R  analysis_data.21.R  analysis_data.22.R  analysis_data.23.R  analysis_data.24.R  analysis_data.25.R  analysis_data.26.R  analysis_data.27.R  analysis_data.28.R  analysis_data.3.R  analysis_data.4.R  analysis_data.5.R  analysis_data.6.R  analysis_data.7.R  analysis_data.8.R  analysis_data.9.R  from_dataset.R  gather_results.R
blog/: site_blog.R
book/: Rtips.Rmd  Rtips2.Rmd  Rtips2.tex  render.R  test.R
bosai/: cover_page_analysis.docx  cover_page_idea.docx  job_copy.Rmd  output.Rmd  output.md  output.tex  require.md  test.R  test.Rmd  离职交接-黄礼闯 20250430.xlsx
build_package_documents/: mcnebula.R
complex/: .gitignore  GraphBAN.html  mount_db.sh  pseudo.html  pseudo.rmd  query.md  scale.md  开具劳务费发票通知.doc  数据分析部门项目分析标准v5.0.docx  诊断项目关键节点核对.docx
data/: ferroptosis_2024-12-05_small.rds  matrisome_small.rds
kidney_neg/: kidney_neg.R
lixiao/2024_04_01_image/findsimilar/: Dockerfile  README.md  main.spec  pyproject.toml
lixiao/2024_04_01_image/findsimilar/findsimilar/: main.py  main_window.py
lixiao/2024_04_01_image/findsimilar/scripts/: run_tool.py
(+1604 files in other folders)
